--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="result"></div>
     <div class="userScore">0</div>
     <div class="computerScore">0</div>
+    <div class="winner"></div>
     <script src="./script.js"></script>
 </body>
 </html>
